[package]
name = "data-structure-algorithms-in-rust"
version = "1.1.1"
authors = ["Maniram yadav"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maniram-yadav/data-structure-algorithms-in-rust"


[dependencies]
log = "0.4"
crossbeam = "0.8"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"