[package]
name = "data-structure-algorithms-in-rust"
version = "1.1.1"
authors = ["Maniram yadav"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maniram-yadav/data-structure-algorithms-in-rust"


[dependencies]
log = "0.4"
crossbeam = "0.8"
tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3"
rand = "0.8"
chrono = "0.4"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"